--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="imagenes/menu.svg" class="nav__icon">
             </a>
 
-            <!-- imagen del icono cerrar menu-->
+            <!-- imagen del icono -->
             <a href="#" class="nav__close">
                 <img src="imagenes/close.svg" class="nav__icon">
             </a>
