agregado de imagenes en galeria y actualizaciones

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -14,7 +14,7 @@
         
         
         <!--Estilos de CSS-->
-        <link rel="stylesheet" href="../css/estilos.css">
+        <link rel="stylesheet" href="../scss/styles.css">
     </head>
 
     <body class="opaco">
@@ -62,8 +62,8 @@
     <!-- Redes sociales -->
     <div class="redes">
         <p>Encontranos en nuestras redes...</p>
-            <div><img src="../imagenes/facebook.png" alt="facebook">BerayahAccesorios</div>  
-            <div><img src="../imagenes/instagram.png" alt="instagram">SomosBerayah</div>
+            <div><img src="../imagenes/facebook.png" alt="facebook" class="fav">BerayahAccesorios</div>  
+            <div><img src="../imagenes/instagram.png" alt="instagram" class="fav">SomosBerayah</div>
     </div> 
 
     <!-- Direccion de la empresa -->
