--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -60,15 +60,31 @@
     
     <!-- Cuerpo principal del menu historia (texto e imagenes) -->
     <div class="CuerpoHistoria">
-        <h1>Nuestra Historia</h1>
-        <img src="../imagenes/trabajando10.jpg" alt="Carpintero" class="img-thumbnail img-fluid" style="width:300px; height: 300px" id="imghistory"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt, obcaecati officiis illum nemo dolor ducimus vero illo maxime ad inventore voluptate necessitatibus non sed ipsum consequatur commodi aliquam. Unde, voluptas.
-        Alias, nemo corporis facilis pariatur eius minus sed et cum! Optio iusto, alias neque repellendus quas accusantium voluptates voluptate aut facere labore consectetur sint consequatur ipsam minima. Voluptatum, rem velit.
-        Est, accusamus magni ea quod provident, corrupti, dicta eligendi in vel similique recusandae animi. Pariatur placeat, quidem, voluptas perspiciatis consectetur inventore voluptatem corporis modi commodi unde repellendus nulla dignissimos quasi. 
-        </p>
-        <img src="../imagenes/trabajando11.jpg" alt="Carpintero" class="img-thumbnail img-fluid" style="width:300px; height: 300px" id="imghistory"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt, obcaecati officiis illum nemo dolor ducimus vero illo maxime ad inventore voluptate necessitatibus non sed ipsum consequatur commodi aliquam. Unde, voluptas.
-        Alias, nemo corporis facilis pariatur eius minus sed et cum! Optio iusto, alias neque repellendus quas accusantium voluptates voluptate aut facere labore consectetur sint consequatur ipsam minima. Voluptatum, rem velit.
-        Est, accusamus magni ea quod provident, corrupti, dicta eligendi in vel similique recusandae animi. Pariatur placeat, quidem, voluptas perspiciatis consectetur inventore voluptatem corporis modi commodi unde repellendus nulla dignissimos quasi. 
-    </p>
+        <h1 style="text-align:center">Nuestra Historia</h1>
+        <div class="row">
+            <div class="col-sm-4"><img src="../imagenes/trabajando10.jpg" alt="Carpintero" class="img-thumbnail img-fluid mx-auto float-start " ></div>
+            <div class="col-sm-8">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In consequuntur aliquam deserunt sequi eveniet? Fugiat molestias, consectetur numquam fugit illum reprehenderit adipisci incidunt facere recusandae, necessitatibus deleniti quae quia culpa.
+            Cumque ad unde, in placeat vel ipsum nostrum sint quos laborum modi excepturi officiis praesentium explicabo cupiditate quisquam. Excepturi, odit! Unde culpa maxime rem doloremque ex aliquid a ipsam deserunt.
+            Dolore, facere molestias? Fuga obcaecati, voluptatem cumque, officiis id totam vero maiores, sit veritatis mollitia officia? Autem corporis eos et laboriosam velit sapiente saepe corrupti consectetur alias. Corrupti, expedita asperiores.
+            Aliquam corporis et praesentium quasi. Expedita delectus exercitationem esse ipsum consequuntur vel sapiente, perspiciatis, nostrum suscipit ea id deleniti necessitatibus quo recusandae iure, sint enim architecto molestias tenetur reprehenderit itaque!
+            Officiis delectus dicta fuga odio magni dolores placeat quisquam maiores quas, nesciunt expedita voluptates dolorem sint quidem quo officia nemo ab repellendus ut magnam incidunt in? Ab itaque iste magni.
+            Sit inventore officiis, rem perferendis commodi totam libero saepe iusto corporis numquam dolorum itaque porro laborum tempore nemo veritatis, iste perspiciatis ad repellendus aliquam. Totam minima nostrum amet beatae reprehenderit.
+            Nemo, error quam. Perferendis omnis quae magnam culpa inventore. Molestias atque possimus a impedit pariatur corrupti nobis deserunt placeat ab hic vitae consectetur cumque deleniti iure incidunt, esse laudantium ipsa!
+            Fuga minima ipsam amet, tempore soluta accusamus ratione nesciunt ut cupiditate itaque similique veritatis nihil tenetur, dolor illo aperiam aspernatur eos consequuntur nam facere maiores aliquam. Eligendi possimus dolores in!
+            </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+            <img src="../imagenes/trabajando11.jpg" alt="Carpintero" class="img-thumbnail img-fluid rounded float-end mx-auto" > </div>
+            <div class="col-sm-8">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt, obcaecati officiis illum nemo dolor ducimus vero illo maxime ad inventore voluptate necessitatibus non sed ipsum consequatur commodi aliquam. Unde, voluptas.
+            Alias, nemo corporis facilis pariatur eius minus sed et cum! Optio iusto, alias neque repellendus quas accusantium voluptates voluptate aut facere labore consectetur sint consequatur ipsam minima. Voluptatum, rem velit.
+            Est, accusamus magni ea quod provident, corrupti, dicta eligendi in vel similique recusandae animi. Pariatur placeat, quidem, voluptas perspiciatis consectetur inventore voluptatem corporis modi commodi unde repellendus nulla dignissimos quasi. 
+            </p>
+            </div>
+        </div>
     </div>
 
     <!-- Pie de la pagina -->
