--- a/paginas/ofertas.html
+++ b/paginas/ofertas.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Soportes y accesorios Berayah">
+    <meta name="keywords" content="soportes, atriles, accesorios, celulares, madera">
+    
+
     <title>Catalogo</title>
 
     <!--fuentes de google-->
@@ -28,7 +32,7 @@
         <nav class="nav container" id="nav">
 
             <!--imagen logo-->
-            <h2 class="nav__logo"><img src="../imagenes/NewLogoBerayah.png" alt="Berayah"></h2>
+            <img class="nav__logo" src="../imagenes/Logo.png" alt="Berayah">
 
             <!-- items del menu -->
             <ul class="nav__links">
@@ -53,12 +57,12 @@
 
             <!-- imagen del icono menu contraible-->
             <a href="#nav" class="nav__hamburguer">
-                <img src="../imagenes/menu.svg" class="nav__icon">
+                <img src="../imagenes/menu.svg" class="nav__icon" alt="boton menu">
             </a>
 
             <!-- imagen del icono -->
             <a href="#" class="nav__close">
-                <img src="../imagenes/close.svg" class="nav__icon">
+                <img src="../imagenes/close.svg" class="nav__icon" alt="boton cerrar">
             </a>
 
         </nav>
@@ -72,14 +76,14 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-4"><img src="../imagenes/oferta 1.jpg"></div>
-      <div class="col-lg-4"><img src="../imagenes/oferta 2.jpg"></div>
-      <div class="col-lg-4"><img src="../imagenes/oferta 3.jpg"></div>
+      <div class="col-lg-4"><img src="../imagenes/oferta 1.jpg" alt="oferta 1"></div>
+      <div class="col-lg-4"><img src="../imagenes/oferta 2.jpg" alt="oferta 2"></div>
+      <div class="col-lg-4"><img src="../imagenes/oferta 3.jpg" alt="oferta 3"></div>
     </div>
     <div class="row">
-      <div class="col-lg-4"><img src="../imagenes/oferta 1.jpg"></div>
-      <div class="col-lg-4"><img src="../imagenes/oferta 2.jpg"></div>
-      <div class="col-lg-4"><img src="../imagenes/oferta 3.jpg"></div>
+      <div class="col-lg-4"><img src="../imagenes/oferta 1.jpg" alt="oferta 4"></div>
+      <div class="col-lg-4"><img src="../imagenes/oferta 2.jpg" alt="oferta 5"></div>
+      <div class="col-lg-4"><img src="../imagenes/oferta 3.jpg" alt="oferta 6"></div>
     </div>
     
 </section>
