--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
 
         <!-- Contenedor principal de Menu de navegacion -->
-        <nav class="nav container" id="nav">
+        <nav class="nav container px-5" id="nav">
 
             <!--imagen logo-->
             <img class="nav__logo" src="./imagenes/Logo.png" alt="Berayah">
