--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -37,16 +37,16 @@
                         <a href="../index.html" class="nav__link">Inicio</a>
                     </li>
                     <li class="nav__item">
-                        <a href="../paginas/historia.html" class="nav__link">Nuestra historia</a>
+                        <a href="./historia.html" class="nav__link">Nuestra historia</a>
                     </li>
                     <li class="nav__item">
-                        <a href="../paginas/catalogo.html" class="nav__link">Catalogo</a>
+                        <a href="./catalogo.html" class="nav__link">Catalogo</a>
                     </li>
                     <li class="nav__item">
-                        <a href="../paginas/ofertas.html" class="nav__link">Ofertas</a>
+                        <a href="./ofertas.html" class="nav__link">Ofertas</a>
                     </li>
                     <li class="nav__item">
-                        <a href="../paginas/contacto.html" class="nav__link">Contacto</a>
+                        <a href="./contacto.html" class="nav__link">Contacto</a>
                     </li>
         
                 </ul>
