--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -1,138 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Soportes y accesorios Berayah">
-    <meta name="keywords" content="soportes, atriles, accesorios, celulares, madera">
-      
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../scss/styles.css" />
-    <!-- Titulo de la pagina -->
-    <title>Historia</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Soportes y accesorios Berayah" />
+  <meta name="keywords" content="soportes, atriles, accesorios, celulares, madera" />
 
-  <!-- Fondo de pantalla -->
-  <body class="fondoprincipal">
-    <header>
-      <!-- Contenedor principal de Menu de navegacion -->
-      <nav class="nav container" id="nav">
-        <!--imagen logo-->
-        <img class="nav__logo" src="../imagenes/Logo.png" alt="Berayah" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="../scss/styles.css" />
 
-        <!-- items del menu -->
-        <ul class="nav__links">
-          <li class="nav__item">
-            <a href="../index.html" class="nav__link">Inicio</a>
-          </li>
-          <li class="nav__item">
-            <a href="../paginas/historia.html" class="nav__link">Nuestra historia</a
->
-          </li>
-          <li class="nav__item">
-            <a href="../paginas/catalogo.html" class="nav__link">Catalogo</a>
-          </li>
-          <li class="nav__item">
-            <a href="../paginas/ofertas.html" class="nav__link">Ofertas</a>
-          </li>
-          <li class="nav__item">
-            <a href="../paginas/contacto.html" class="nav__link">Contacto</a>
-          </li>
-        </ul>
+  <!-- Titulo de la pagina -->
+  <title>Nuestra Historia</title>
+</head>
 
-        <!-- imagen del icono menu contraible-->
-        <a href="#nav" class="nav__hamburguer">
-          <img src="../imagenes/menu.svg" class="nav__icon" alt="boton menu"/>
-        </a>
+<!-- Fondo de pantalla -->
 
-        <!-- imagen del icono -->
-        <a href="#" class="nav__close">
-          <img src="../imagenes/close.svg" class="nav__icon" alt="boton cerrar"/>
-        </a>
-      </nav>
-    </header>
+<body class="opaco">
+  <header>
+    <!-- Contenedor principal de Menu de navegacion -->
+    <nav class="nav container px-5" id="nav">
+      <!--imagen logo-->
+      <img class="nav__logo" src="../imagenes/Logo.png" alt="Berayah" />
 
-    <!-- Cuerpo principal del menu historia (texto e imagenes) -->
+      <!-- items del menu -->
+      <ul class="nav__links">
+        <li class="nav__item">
+          <a href="../index.html" class="nav__link">Inicio</a>
+        </li>
+        <li class="nav__item">
+          <a href="./historia.html" class="nav__link">Nuestra historia</a>
+        </li>
+        <li class="nav__item">
+          <a href="./catalogo.html" class="nav__link">Catalogo</a>
+        </li>
+        <li class="nav__item">
+          <a href="./ofertas.html" class="nav__link">Ofertas</a>
+        </li>
+        <li class="nav__item">
+          <a href="./contacto.html" class="nav__link">Contacto</a>
+        </li>
+      </ul>
+
+      <!-- imagen del icono menu contraible-->
+      <a href="#nav" class="nav__hamburguer">
+        <img src="../imagenes/menu.svg" class="nav__icon" alt="boton menu" />
+      </a>
+
+      <!-- imagen del icono -->
+      <a href="#" class="nav__close">
+        <img src="../imagenes/close.svg" class="nav__icon" alt="boton cerrar" />
+      </a>
+    </nav>
+  </header>
+
+  <!-- Cuerpo principal del menu historia (texto e imagenes) -->
+
+  <main>
     <div class="CuerpoHistoria">
       <h1 style="text-align: center">Nuestra Historia</h1>
-      <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="../imagenes/trabajando10.jpg"
-            alt="Carpintero"
-            class="img-thumbnail img-fluid mx-auto float-start"
-          />
-        </div>
+      <div class="row pt-3">
         <div class="col-sm-8">
+          <img src="../imagenes/trabajando10.jpg" alt="Carpintero"
+            class="img-fluid border-3 rounded" id="fotohistoria" />
+        </div>
+        <div class="col-sm-4">
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In
-            consequuntur aliquam deserunt sequi eveniet? Fugiat molestias,
-            consectetur numquam fugit illum reprehenderit adipisci incidunt
-            facere recusandae, necessitatibus deleniti quae quia culpa. Cumque
-            ad unde, in placeat vel ipsum nostrum sint quos laborum modi
-            excepturi officiis praesentium explicabo cupiditate quisquam.
-            Excepturi, odit! Unde culpa maxime rem doloremque ex aliquid a ipsam
-            deserunt. Dolore, facere molestias? Fuga obcaecati, voluptatem
-            cumque, officiis id totam vero maiores, sit veritatis mollitia
-            officia? Autem corporis eos et laboriosam velit sapiente saepe
-            corrupti consectetur alias. Corrupti, expedita asperiores. Aliquam
-            corporis et praesentium quasi. Expedita delectus exercitationem esse
-            ipsum consequuntur vel sapiente, perspiciatis, nostrum suscipit ea
-            id deleniti necessitatibus quo recusandae iure, sint enim architecto
-            molestias tenetur reprehenderit itaque! Officiis delectus dicta fuga
-            odio magni dolores placeat quisquam maiores quas, nesciunt expedita
-            voluptates dolorem sint quidem quo officia nemo ab repellendus ut
-            magnam incidunt in? Ab itaque iste magni. Sit inventore officiis,
-            rem perferendis commodi totam libero saepe iusto corporis numquam
-            dolorum itaque porro laborum tempore nemo veritatis, iste
-            perspiciatis ad repellendus aliquam. Totam minima nostrum amet
-            beatae reprehenderit. Nemo, error quam. Perferendis omnis quae
-            magnam culpa inventore. Molestias atque possimus a impedit pariatur
-            corrupti nobis deserunt placeat ab hic vitae consectetur cumque
-            deleniti iure incidunt, esse laudantium ipsa! Fuga minima ipsam
-            amet, tempore soluta accusamus ratione nesciunt ut cupiditate itaque
-            similique veritatis nihil tenetur, dolor illo aperiam aspernatur eos
-            consequuntur nam facere maiores aliquam. Eligendi possimus dolores
-            in!
+            Todo empezo en el comedor de nuestro hogar, un dia entre mates e intercambio de ideas en una tipica reunion familiar surgio "Berayah" que significa "bendicion de Dios", y eso es lo que ha sido para nosotros en todo momento.  
+            Como todo comienzo no ha sido facil, hubo que enfrentar adversidades y tiempos dificiles que nos rodeaban, un panorama mundial no muy alentador... pero a pesar de todo nos manteniamos firmes sabiendo que era posible poder ver hecho realidad nuestro sueño.
+            Se sumaron cada vez mas ideas, con el correr del tiempo fuimos aprendiendo de nuestros errores y perfeccionando cada vez mas nuestros productos deseando ser para nuestro cliente como dice nuestro emblema una bendicion.
+            Empezamos como toda empresa familiar a ser conocidos por amigos, compañeros, todo de boca en boca, con mucha satisfaccion empezamos a ver los frutos de tanto esfuerzo y horas dedicados a nuestros productos y clientes.
           </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="../imagenes/trabajando11.jpg"
-            alt="Carpintero"
-            class="img-thumbnail img-fluid rounded float-end mx-auto"
-          />
-        </div>
         <div class="col-sm-8">
+          <img src="../imagenes/trabajando11.jpg" alt="Carpintero"
+            class="img-fluid border-3 rounded" id="fotohistoria" />
+        </div>
+        <div class="col-sm-4">
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt,
-            obcaecati officiis illum nemo dolor ducimus vero illo maxime ad
-            inventore voluptate necessitatibus non sed ipsum consequatur commodi
-            aliquam. Unde, voluptas. Alias, nemo corporis facilis pariatur eius
-            minus sed et cum! Optio iusto, alias neque repellendus quas
-            accusantium voluptates voluptate aut facere labore consectetur sint
-            consequatur ipsam minima. Voluptatum, rem velit. Est, accusamus
-            magni ea quod provident, corrupti, dicta eligendi in vel similique
-            recusandae animi. Pariatur placeat, quidem, voluptas perspiciatis
-            consectetur inventore voluptatem corporis modi commodi unde
-            repellendus nulla dignissimos quasi.
+            Con el correr del tiempo decidimos dar otro salto e ingresar en las redes sociales ya que habia demanda y buena aceptacion por parte de nuestros clientes, llegamos a realizar envios a domicilio a nuestros amigos y nuevos clientes con gran emocion empezamos a meternos en el mercado local. 
+            Seguimos trabajando, seguimos esforzandonos para que todos los que confian en nosotros reciban un excelente producto, calidad y sobre todo la mejor atencion.
+            Empezamos con algo tan pequeño como realizar un soporte para celular para brindar comodidad al cliente, que hoy en dia disponemos de atriles a medida, soportes tanto verticales como horizontales para celulares y tablets, portalapiceras, soportes para set de baño, posavasos, e ideas nuevas que se van sumando a nuestro catalogo...
+            
+            Gracias por apoyarnos y confiar en nosotros!
+
+            <h5 style="text-align: left">Berayah Accesorios</h5>
           </p>
         </div>
       </div>
     </div>
-
+  </main>
     <!-- Pie de la pagina -->
     <footer>
       <p style="text-align: center">
         Copyright© 2020 - 2022 BerayahAccesorios Derechos Reservados
       </p>
     </footer>
-  </body>
+</body>
+
 </html>
