--- a/paginas/ofertas.html
+++ b/paginas/ofertas.html
@@ -29,7 +29,7 @@
     <header >
 
         <!-- Contenedor principal de Menu de navegacion -->
-        <nav class="nav container" id="nav">
+        <nav class="nav container px-5" id="nav">
 
             <!--imagen logo-->
             <img class="nav__logo" src="../imagenes/Logo.png" alt="Berayah">
@@ -41,16 +41,16 @@
                     <a href="../index.html" class="nav__link">Inicio</a>
                 </li>
                 <li class="nav__item">
-                    <a href="../paginas/historia.html" class="nav__link">Nuestra historia</a>
+                    <a href="./historia.html" class="nav__link">Nuestra historia</a>
                 </li>
                 <li class="nav__item">
-                    <a href="../paginas/catalogo.html" class="nav__link">Catalogo</a>
+                    <a href="./catalogo.html" class="nav__link">Catalogo</a>
                 </li>
                 <li class="nav__item">
-                    <a href="../paginas/ofertas.html" class="nav__link">Ofertas</a>
+                    <a href="./ofertas.html" class="nav__link">Ofertas</a>
                 </li>
                 <li class="nav__item">
-                    <a href="../paginas/contacto.html" class="nav__link">Contacto</a>
+                    <a href="./contacto.html" class="nav__link">Contacto</a>
                 </li>
     
             </ul>
@@ -72,18 +72,13 @@
 <section id="galeria" class="container">
 
     <div class="text-center pt-5">
-        <h1>Catalogo</h1>
+        <h1>Ofertas Imperdibles!!!</h1>
     </div>
 
     <div class="row">
       <div class="col-lg-4"><img src="../imagenes/oferta 1.jpg" alt="oferta 1"></div>
       <div class="col-lg-4"><img src="../imagenes/oferta 2.jpg" alt="oferta 2"></div>
       <div class="col-lg-4"><img src="../imagenes/oferta 3.jpg" alt="oferta 3"></div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4"><img src="../imagenes/oferta 1.jpg" alt="oferta 4"></div>
-      <div class="col-lg-4"><img src="../imagenes/oferta 2.jpg" alt="oferta 5"></div>
-      <div class="col-lg-4"><img src="../imagenes/oferta 3.jpg" alt="oferta 6"></div>
     </div>
     
 </section>
