modificaciones de la entrega3

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -17,7 +17,7 @@
         
         
         <!--Estilos de CSS-->
-        <link rel="stylesheet" href="../scss/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body class="opaco">
@@ -118,7 +118,7 @@
 
     <!-- Pie de pagina -->
     <footer> 
-        <p style="text-align:center">Copyright© 2020 - 2022 BerayahAccesorios Derechos Reservados</p>
+        <p>Copyright© 2020 - 2022 BerayahAccesorios Derechos Reservados</p>
     </footer>
 
 </body>
