--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Menu Principal</title>
         
     <!--Estilos de CSS-->
-    <link rel="stylesheet" href="scss/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     
     <!--fuentes de google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
     <header>
 
         <!-- Contenedor principal de Menu de navegacion -->
-        <nav class="nav container px-5" id="nav">
+        <nav class="nav container" id="nav">
 
             <!--imagen logo-->
             <img class="nav__logo" src="./imagenes/Logo.png" alt="Berayah">
