--- a/paginas/catalogo.html
+++ b/paginas/catalogo.html
@@ -25,7 +25,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!--Estilos de CSS-->
-    <link rel="stylesheet" href="../scss/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 
@@ -74,7 +74,7 @@
 
     </header>
 
-    <h1 style="text-align: center"> Catalogo de productos </h1>
+    <h1> Catalogo de productos </h1>
 
     <section id="catalogo">
         <div class="container">
@@ -123,6 +123,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-
+<!-- Pie de pagina -->
+<footer> 
+    <p>Copyright© 2020 - 2022 BerayahAccesorios Derechos Reservados</p>
+</footer>
 
 </html>
