--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -10,7 +10,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="../scss/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 
   <!-- Titulo de la pagina -->
   <title>Nuestra Historia</title>
@@ -87,18 +87,17 @@
             Empezamos con algo tan pequeño como realizar un soporte para celular para brindar comodidad al cliente, que hoy en dia disponemos de atriles a medida, soportes tanto verticales como horizontales para celulares y tablets, portalapiceras, soportes para set de baño, posavasos, e ideas nuevas que se van sumando a nuestro catalogo...
             
             Gracias por apoyarnos y confiar en nosotros!
+          </p>    
 
-            <h5 style="text-align: left">Berayah Accesorios</h5>
-          </p>
+          <p>Berayah Accesorios</p>  
+          
         </div>
       </div>
     </div>
   </main>
     <!-- Pie de la pagina -->
     <footer>
-      <p style="text-align: center">
-        Copyright© 2020 - 2022 BerayahAccesorios Derechos Reservados
-      </p>
+      <p>Copyright© 2020 - 2022 BerayahAccesorios Derechos Reservados</p>
     </footer>
 </body>
 
