--- a/paginas/ofertas.html
+++ b/paginas/ofertas.html
@@ -19,7 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!--Estilos de CSS-->
-    <link rel="stylesheet" href="../scss/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     
 </head>
 
@@ -29,7 +29,7 @@
     <header >
 
         <!-- Contenedor principal de Menu de navegacion -->
-        <nav class="nav container px-5" id="nav">
+        <nav class="nav container" id="nav">
 
             <!--imagen logo-->
             <img class="nav__logo" src="../imagenes/Logo.png" alt="Berayah">
@@ -85,7 +85,7 @@
 
     <!-- Pie de pagina -->
     <footer> 
-        <p style="text-align:center">Copyright© 2020 - 2022 BerayahAccesorios Derechos Reservados</p>
+        <p>Copyright© 2020 - 2022 BerayahAccesorios Derechos Reservados</p>
     </footer>
     
 </body>
